2018-10-31  <kennethj@gagarin.uit.no>
    * process_systemx.py:   updated to handle utf-8 data. updated how to calculate gecos
2018-10-25  <kennethj@gagarin.uit.no>
    * export_ad.py: added missing unicode_literals import
    * import_system_accounts.py:    updated to handle unicode, also replaced function that creates unicode to use transliterate
    * .vscode: added code debug file
2018-10-25  <kennethj@gagarin.uit.no>
    * import_tlf.py: added sendmail import (which was removed while testing)
2018-10-25  <kennethj@gagarin.uit.no>
    * ADquickSync.py:   fixed indentation mess.

2018-10-23    <kennethj@gagarin.uit.no>
    * ADquickSync.py:   updated to read json from changelog.
2018-10-21    <kennethj@gagarin.uit.no>
    * ad_export_autogroups_undervisning.py:  updated to read utf-8 instead of iso-8859-1
    * export_ad.py : updated to read utf-8 instead of iso-8859-1
    * export_ldap.py : updated to read utf-8 instead of iso-8859-1. also fixed 2 parameter name changes
    * export_oid.py:  updated to read utf-8 instead of iso-8859-1
    * export_securimaster.py: updated to read utf-8 instead of iso-8859-1
    * generate_groups_ldif.py: updated to read utf-8 instead of iso-8859-1
    * generate_temp_employee_xml.py: updated to read utf-8 instead of iso-8859-1

2018-10-21    <kennethj@gagarin.uit.no>
    * generate_kurs_ldif.py:  updated to read utf-8 instead of iso-8859-1

2018-10-21    <kennethj@gagarin.uit.no>
    * import_tlf.py:  updated to write utf-8 encoded strings to FS

2018-10-21    <kennethj@gagarin.uit.no>
    * update_displayname.py:  updated to write utf-8 encoded strings to FS

2018-10-21    <kennethj@gagarin.uit.no>
    * wipe.py:  updated to handle json format in changelog instead of pickle

2018-10-21    <kennethj@gagarin.uit.no>
    * import_SYSX.py: updated to handle ou file on utf-8 format

2018-10-21    <kennethj@gagarin.uit.no>
    * import_sito.py: updated to handle ou file on utf-8 format


2018-10-21    <kennethj@gagarin.uit.no>